apps/rwmarkable/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rwmarkable
  namespace: rwmarkable
spec:
  serviceName: rwmarkable
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rwmarkable
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rwmarkable
    spec:
      containers:
        - name: rwmarkable
          image: ghcr.io/fccview/rwmarkable:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /app/data
            - name: config
              mountPath: /app/config
      volumes:
        - name: config
          configMap:
            name: rwmarkable-config
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn
        resources:
          requests:
            storage: 5Gi
